[package]
name = "metio"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Stiehl <kevin.stiehl@numericas.de>"]
description = "The library for interacting with metio compliant systems"
homepage = "https://bagaluten.io"
repository = "https://github.com/bagaluten/metio-rs.git"
license = "MIT"
readme = "README.md"
exclude = [".github", ".gitignore"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.35.1"
async-trait = "0.1.74"
chrono = "0.4.31"
serde = { version = "1.0.190", optional = true }
serde_json = { version = "1.0.108", optional = true }
tracing = "0.1.40"

[features]
serde = ["serde/derive", "chrono/serde"]
